[gd_scene load_steps=2 format=3 uid="uid://b2s5k312re6da"]

[ext_resource type="Script" uid="uid://3iyfcnvqnwxw" path="res://mundo.gd" id="1_6ba58"]

[node name="Mundo" type="Node2D"]
script = ExtResource("1_6ba58")

[node name="Fundo" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.176471, 0.176471, 0.176471, 1)

[node name="Interface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="ExibidorDePontos" type="Label" parent="Interface"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Formas: 0"
horizontal_alignment = 1

[node name="MenuDeUpgrades" type="VBoxContainer" parent="Interface"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="BotaoUpgradeClique" type="Button" parent="Interface/MenuDeUpgrades"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Melhorar Clique (Custo: 10)"

[node name="GeradorPrincipal" type="ColorRect" parent="."]
offset_left = 501.0
offset_top = 249.0
offset_right = 651.0
offset_bottom = 399.0
color = Color(0.333333, 0.666667, 1, 1)

[connection signal="pressed" from="Interface/MenuDeUpgrades/BotaoUpgradeClique" to="." method="_on_botao_upgrade_clique_pressed"]
[connection signal="gui_input" from="GeradorPrincipal" to="." method="_on_gerador_principal_gui_input"]
